2004-05-18  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentrycompletion.c (_gtk_entry_completion_resize_popup): 
	Restrict the width of the popup to be no larger than the
	monitor.  (#142678, DmD Ljungmark)

	* gtk/gtkbutton.c: Go back to the initial fix for the 
	focus-overdrawing problem, which was actually correct 
	according to docs/widget_geometry.txt.

	* gtk/gtkarrow.c (gtk_arrow_class_init): Bump the initial
	arrow size from 11 to 15 to compensate for that.

	* gtk/gtktextview.c (gtk_text_view_class_init): Document the
	arguments of the ::move-cursor signal.  (#142725)

2004-05-17  Matthias Clasen  <mclasen@redhat.com>

        Merged from 2.4:
	
	* gtk/gtkbutton.c (gtk_button_size_request) 
	(gtk_button_size_allocate, _gtk_button_paint): Allocate
	space for the focus rectangle only if necessary.  (#142668,
	Michael Natterer)

Sun May 16 23:11:47 2004  Matthias Clasen  <maclas@gmx.de>

	Merged from 2.4:
	
	* gtk/gtkhruler.c (gtk_hruler_draw_ticks): Remove two useless 
	lines.  (#142479, Morten Welinder)

Sun May 16 22:27:17 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkintl.h (Q_): Add a Q_() macro. 

	* gtk/gtkcellrendererprogress.h: Remove GTK_PROGRESS_CELL_UNKNOWN
	and GTK_PROGRESS_CELL_FAILED. With the ability the set the label,
	they are not really needed.

	* gtk/gtkcellrendererprogress.c: Use the xpad and ypad properties
	instead of hardwired padding, use Q_() for the default label, 
	compute a reasonable minimal size.  (#142571, #142572, #142573,
	Tommi Komulainen, Christian Persch)
	
2004-05-15  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkdnd-win32.c: Put back the ref_count field in the
	GdkDragContextPrivateWin32 struct (but inside ifdef OLE2_DND this
	time). It is used by the OLE2_DND code, which is unfinished and
	presumably horribly broken, but still, let's not make it not
	compile on purpose. Silence some gcc warnings in the OLE2_DND
	code.

2004-05-14  Matthias Clasen  <mclasen@redhat.com>
